# MyFireflyWife

./: .gitignore  CMakeLists.txt  README.md
data/config/: action.json  main.json  voice.json
include/: Action.h  FireflyVoice.h  FireflyWindow.h  FireflyWindowConfig.h  Log.h  Media.h  RoleProperty.h
src/: MyWifeFirefly.cpp
src/ActionEvent/: Action.cpp
src/FireflyVoice/: FireflyVoice.cpp
src/Log/: Log.cpp
src/MediaPlayer/: Media.cpp
src/Window/Firefly/: FireflyWindow.cpp  FireflyWindowConfig.cpp
